# KoopaShell

./: Cargo.toml  LICENSE.md  README.md  install_dependecies.sh
server_core/: Cargo.toml
server_core/src/: lib.rs  start_listener.rs
src/: main.rs  path_completer.rs  shell.rs  shell_functions.rs
